# SDR-888

./: CMakeLists.txt  local-prompt.md  locale.py  make_macos_bundle.sh  make_windows_package.ps1
.github/workflows/: build_all.yml
core/: CMakeLists.txt
core/backends/android/: backend.cpp
core/backends/glfw/: backend.cpp
core/backends/metal/: backend.mm
core/backends/windows/: backend.cpp
core/src/: backend.h  core.cpp
core/src/dsp/buffer/: buffer.h
core/src/dsp/demod/: am.h  cw.h  sam.h  ssb.h
core/src/dsp/loop/: gain.h  if_agc.h
core/src/dsp/noise_reduction/: anr.h  auto_notch.h
core/src/dsp/window/: blackman.h  blackman_harris.h  flat_top.h  hamming.h  hann.h  nuttall.h
core/src/gui/: gui.cpp  gui.h  i18n.cpp  i18n.h  main_window.cpp  style.cpp  style.h
core/src/gui/dialogs/: credits.cpp
core/src/gui/menus/: display.cpp  module_manager.cpp  source.cpp  theme.cpp  vfo_color.cpp
core/src/gui/widgets/: image.cpp  line_push_image.cpp  waterfall.cpp  waterfall.h
core/src/imosm/include/: ImOsmTileTexture.h
core/src/imosm/src/: ImOsmTileSourceAsync.cpp  ImOsmTileSourceWidget.cpp
core/src/signal_path/: iq_frontend.cpp  iq_frontend.h
core/src/utils/: flog.cpp  optionlist.h
decoder_modules/ft8_decoder/src/: main.cpp  monitor.c  monitor.h
decoder_modules/radio/: CMakeLists.txt
decoder_modules/radio/src/: demod.h  radio_interface.h  radio_module.h
decoder_modules/radio/src/cdr/: CDRReceiver.h
decoder_modules/radio/src/cdr/CDRDemod/src/: cdrDeMultiplexMSDS.c  cdrDeMultiplexMSDS.h  cdrDeMultiplexSDIS.c  cdrDeMultiplexSDIS.h  cdrDemodCore.c  cdrDiscretePilot.c  cdrDiscretePilot.h  cdrFFTW.c  cdrFFTW.h  cdrIQFilter.c  cdrIQFilter.h  cdrIQFilterConst.c  cdrInterleave.c  cdrInterleave.h  cdrLDPCCodec.c  cdrLDPCCodec.h  cdrLDPC_1_2.c  cdrLDPC_1_3.c  cdrLDPC_1_4.c  cdrLDPC_3_4.c  cdrMSDS.c  cdrMSDS.h  cdrModulation.c  cdrModulation.h  cdrModulationConst.c  cdrOFDMDemod.c  cdrOFDMDemod.h  cdrOfdmConst.c  cdrOfdmConst.h  cdrOfdmSymbol.c  cdrOfdmSymbol.h  cdrPilot.c  cdrPilot.h  cdrSDIS.c  cdrSDIS.h  cdrScramble.c  cdrScramble.h  cdrSuperFrame.c  cdrSuperFrame.h  cdrSysInfo.c  (+7 more)
decoder_modules/radio/src/cdr/DRADecoder/src/: Huffmanbook.c  Huffmanbook.h  draConst.c  draConst.h  draConstGen.c  draDecoder.c  draFrame.c  draFrame.h  draMDCT.c  draMDCT.h  draUtility.c  draUtility.h  huffmanConst.h  tsStreamGen.c
decoder_modules/radio/src/cdr/include/: cdrDemod.h  draDecoder.h  ts.h
decoder_modules/radio/src/demodulators/: am.h  cdr.h  cw.h  drm.h  dsb.h  lsb.h  nfm.h  sam.h  ssb.h  usb.h  wfm.h
decoder_modules/radio/src/drm/: DRMReceiver.cpp  DRMReceiver.h  GlobalDefinitions.h
decoder_modules/radio/src/drm/sourcedecoders/: AudioSourceDecoder.h
docker_builds/debian_bookworm/: do_build.sh
docker_builds/debian_bullseye/: do_build.sh
docker_builds/debian_sid/: do_build.sh
docker_builds/debian_trixie/: do_build.sh
extio/: CMakeLists.txt  ExtIO_sddc.cpp  ExtIO_sddc.h  extio_config.h  tdialog.cpp  tdialog.h
macos/: bundle_utils.sh
misc_modules/recorder/src/: main.cpp
root/res/locales/: ja_JP.json  zh_CN.json
source_modules/sddc_source/: CMakeLists.txt
source_modules/sddc_source/src/: alex.h  fft_rx_vfo.h  main.cpp  pf_rx_vfo.h
source_modules/web888_source/src/: kiwisdr.h
src/: main.cpp  win.cpp
tests/: CppUnitTestFramework.hpp
